--- a/Assignment-13/Assignment-13.tex
+++ b/Assignment-13/Assignment-13.tex
@@ -90,7 +90,7 @@
             \notag\approx&\frac{1}{\pi}\int_0^{\infty}\mathrm{d}k\,e^{-\frac{\beta}{m}\hbar^2k^2}\frac{\mathrm{d}(-ka)}{\mathrm{d}k}+\frac{1}{\pi}\sum_{l=2,4,6,\cdots}(2l+1)\int_0^{\infty}\mathrm{d}k\,e^{-\frac{\beta}{m}\hbar^2k^2}\frac{\mathrm{d}(ka)^{2l+1}}{\mathrm{d}k}\\
             \notag=&-\frac{a}{\pi}\int_0^{\infty}\mathrm{d}k\,e^{-\frac{\beta}{m}\hbar^2k^2}+\frac{1}{\pi}\sum_{l=2,4,6,\cdots}a^{2l+1}(2l+1)^2\int_0^{\infty}\mathrm{d}k\,e^{-\frac{\beta}{m}\hbar^2k^2}k^{2l}\\
             \notag=&-\frac{a}{\pi}\frac{1}{2}\sqrt{\frac{m\pi}{\beta\hbar^2}}+\frac{1}{\pi}\sum_{l=2,4,6,\cdots}a^{2l+1}(2l+1)^2\int_0^{\infty}\mathrm{d}k\,e^{-\beta\hbar^2k^2}k^{2l}\\
-            =&\frac{a}{\sqrt{2}\lambda}+O\left(\frac{a^5}{\lambda^5}\right).
+            =&-\frac{a}{\sqrt{2}\lambda}+O\left(\frac{a^5}{\lambda^5}\right).
         \end{align}
         因此，
         \begin{align}
